# twitch-gql-rs

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/: FUNDING.yml
src/: api.rs  client_type.rs  error.rs  gql.rs  lib.rs  structs.rs
