[package]
name = "twitch-gql-rs"
description = "GraphQL client and types for interacting with Twitch's GraphQL API."
license = "MIT OR Apache-2.0"
keywords = ["twitch", "graphql", "gql", "streaming", "api"]
homepage = "https://github.com/this-is-really/twitch-gql-rs"
version = "0.3.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.13", features = ["json", "socks", "form", "query"] }
tokio = { version = "1.50", features = ["full"] }
uuid = { version = "1.23", features = ["v4"]}
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2.0.17"
regex = "1.12.2"
base64 = "0.22.1"
rand = "0.10"
