[package]
name = "twitch-gql-rs"
description = "GraphQL client and types for interacting with Twitch's GraphQL API."
license = "MIT OR Apache-2.0"
keywords = ["twitch", "graphql", "gql", "streaming", "api"]
homepage = "https://github.com/this-is-really/twitch-gql-rs"
version = "0.3.3"
edition = "2024"

[dependencies]
reqwest = { version = "0.13.3", features = ["json", "socks", "form", "query"] }
tokio = { version = "1.52.3", features = ["full"] }
uuid = { version = "1.23.1", features = ["v4"]}
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
regex = "1.12.3"
base64 = "0.22.1"
rand = "0.10.1"
chrono = "0.4.44"
flate2 = "1.1.9"
